# test-cursor

./: .env  .env.example  .gitignore  README.md  README_en.md  pyproject.toml
docs/: Cursor_config.md  Cursor_config_en.md  Interacting_with_cursor_records.md  Interacting_with_cursor_records_en.md  defaultSettings.json
src/test_cursor/network/: http_performance.py  i18n.py
src/test_cursor/network/locale/zh_CN/LC_MESSAGES/: messages.po
tests/network/: .env.example  http_performance.py
